--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "webstorm-disable-index": "1",
-    "zeppelin-solidity": "^1.2.0"
+    "webstorm-disable-index": "^1.2.0",
+    "zeppelin-solidity": "^1.3.0"
   }
 }
