--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
     "webstorm-disable-index": "^1.2.0",
-    "zeppelin-solidity": "^1.3.0"
+    "zeppelin-solidity": "^1.6.0"
   }
 }
